# pg-embed

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
docs/: technical-handbook.md  user-handbook.md
examples/: example.rs
migration_test/: 01_data.sql
src/: command_executor.rs  errors.rs  fetch.rs  lib.rs  pg_access.rs  pg_commands.rs  pg_enums.rs  pg_errors.rs  pg_fetch.rs  pg_types.rs  pg_unpack.rs  postgres.rs
src/errors/: errors_actix.rs  errors_actix_migrate.rs  errors_async_std.rs  errors_async_std_migrate.rs  errors_common.rs  errors_tokio.rs  errors_tokio_migrate.rs  mod.rs
tests/: auth.rs  common.rs  database.rs  download_test.rs  extension.rs  lifecycle.rs  migration.rs  migration_tokio.rs  postgres_test.rs  postgres_tokio.rs
