[package]
name = "pg-embed"
version = "0.9.0"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faokunega/pg-embed"
documentation = "https://docs.rs/pg-embed"
description = "Run a Postgresql database locally on Linux, MacOS or Windows as part of another Rust application or test."
edition = "2021"
keywords = ["database", "postgres", "postgresql", "embedded", "server"]
categories = [
    "database",
    "database-implementations",
    "development-tools",
    "asynchronous",
]
authors = ["Franz-Aliu Okunega <aokunega@gmail.com>"]

[features]
default = ["rt_tokio_migrate"]
# for now only rt_tokio or rt_tokio_migrate can be used
rt_tokio = ["tokio", "reqwest"]
rt_tokio_migrate = ["tokio", "reqwest", "sqlx"]

[dependencies]
reqwest = { version = "0.12.12", optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }
futures = "0.3"
thiserror = "2.0"
# Waiting for https://github.com/JoyMoe/archiver-rs/pull/6
archiver-rs = { git = "https://github.com/gz/archiver-rs.git", branch = "patch-1" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"], optional = true }
log = "0.4"
dirs = "6.0"
bytes = "1.10"
lazy_static = "1.5"
async-trait = "0.1"

[dev-dependencies]
serial_test = "3.2"
env_logger = "0.11"

[[test]]
name = "migration_tokio"
path = "tests/migration_tokio.rs"
required-features = ["rt_tokio_migrate"]

[[test]]
name = "postgres_tokio1"
path = "tests/postgres_tokio.rs"
required-features = ["rt_tokio"]

[[test]]
name = "postgres_tokio2"
path = "tests/postgres_tokio.rs"
required-features = ["rt_tokio_migrate"]

[[example]]
name = "example"
required-features = ["rt_tokio_migrate"]
